--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "rouye/calendrier-php",
     "autoload": {
         "psr-4": {
-            "Date\\": "src/Date"
+            "Date\\": "src/Date",
+            "App\\": "src/App"
         }
     },
     "authors": [
